force-app/main/default/objects/TDRSubentregable__c/TDRSubentregable__c.object-meta.xml
<CustomObject>
    <label>Relación Entregable con TDR</label>
    <nameField>
        <displayFormat>TDRSUB-{0000000}</displayFormat>
        <label>Código TDR-ENT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relaciones Entregables con TDRs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>