force-app/main/default/objects/TDRSubentregable__c/fields/Entregable__c.field-meta.xml
<CustomField>
    <fullName>Entregable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Entregables</label>
    <referenceTo>Entregable__c</referenceTo>
    <relationshipLabel>Relaciones Grupo de Entregables con TDRs</relationshipLabel>
    <relationshipName>TDRsEntregables</relationshipName>
    <type>Lookup</type>
</CustomField>