force-app/main/default/objects/TDRSubentregable__c/validationRules/Mismo_proyecto.validationRule-meta.xml
<ValidationRule>
    <fullName>Mismo_proyecto</fullName>
    <active>false</active>
    <description>Obliga a que coincida el Proyecto del Entregable y del TDR</description>
    <errorConditionFormula>Subentregable__r.Grupos_de_Entregables__r.Hito__r.Proyecto__c  &lt;&gt; TerminoReferencia__r.Proyecto__c</errorConditionFormula>
    <errorMessage>El TDR y el Entregable deben pertenecer al mismo Proyecto.</errorMessage>
</ValidationRule>